ping-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: node-ping-deployment
  namespace: katalog-test
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: node-ping-pod
  template:
    metadata:
      labels:
        ingress: enabled
        app: node-ping-pod
    spec:
      containers:
      - image: philipbhs/node-ping
        imagePullPolicy: Always
        name: node-ping-container
        ports:
        - containerPort: 3000
#        resources:
#          limits:
#            memory: "1000Mi"
