ping-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-ping-service
  namespace: katalog-test
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: ping-pod
  type: ClusterIP
